k8s/mashup-foods-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foods-v2
  labels:
    app: foods
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foods
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: foods
        version: v2
    spec:
      serviceAccountName: mashup-foods
      containers:
      - name: foods
        image: docker.io/gmeghnag/mashup-foods:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
