k8s/mashup-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  labels:
    app: frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: frontend
        version: v1
    spec:
      serviceAccountName: mashup-frontend
      containers:
      - name: frontend
        image: docker.io/gmeghnag/mashup-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
