k8s/mashup-foods-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foods
  labels:
    app: foods
    service: foods
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: foods
