k8s/mashup-frontend-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    service: frontend
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: frontend
