k8s/mashup-virtualServices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mashup
spec:
  hosts:
  - "*"
  gateways:
  - mashup-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /headers
    - uri:
        exact: "/foods"
    route:
    - destination:
        host: frontend
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - frontend
  http:
  - route:
    - destination:
        host: frontend
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foods-v1
spec:
  hosts:
  - foods
  http:
  - match:
    - headers:
        X-Mashup-Country:
          exact: Italia
    route:
    - destination:
        host: foods
        subset: v1
  - match:
    - headers:
        X-Mashup-Country:
          exact: Spain
    route:
    - destination:
        host: foods
        subset: v2
